--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,16 @@ timezone: Asia/Singapore
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: The Echo Chamber # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Hey, you. You're finally awake. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A diary of another person.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://teohongwei898.github.io"
 
 github:
   username: github_username # change to your github username
