Added GitHub and Twitter Username

--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://teohongwei898.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: teohongwei898 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: hongwei898 # change to your twitter username
 
 social:
   # Change to your full name.
